--- a/preparing_data.ipynb
+++ b/preparing_data.ipynb
@@ -895,7 +895,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1224,7 +1224,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 47,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1233,6 +1233,20 @@
         "outputId": "616b9a05-ba10-476f-dde4-7a3e4e493873"
       },
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+            "To disable this warning, you can either:\n",
+            "\t- Avoid using `tokenizers` before the fork if possible\n",
+            "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
+            "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+            "To disable this warning, you can either:\n",
+            "\t- Avoid using `tokenizers` before the fork if possible\n",
+            "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -1243,29 +1257,54 @@
             "    _|_|_|_|  _|    _|  _|  _|_|  _|  _|_|    _|    _|  _|  _|  _|  _|_|      _|_|_|    _|_|_|_|  _|        _|_|_|\n",
             "    _|    _|  _|    _|  _|    _|  _|    _|    _|    _|    _|_|  _|    _|      _|        _|    _|  _|        _|\n",
             "    _|    _|    _|_|      _|_|_|    _|_|_|  _|_|_|  _|      _|    _|_|_|      _|        _|    _|    _|_|_|  _|_|_|_|\n",
-            "\n",
-            "    A token is already saved on your machine. Run `huggingface-cli whoami` to get more information or `huggingface-cli logout` if you want to log out.\n",
-            "    Setting a new token will erase the existing one.\n",
+            "    \n",
             "    To login, `huggingface_hub` requires a token generated from https://huggingface.co/settings/tokens .\n",
-            "Token: \n",
-            "Add token as git credential? (Y/n) Y\n",
+            "Token: Traceback (most recent call last):\n",
+            "  File \"/Users/relhousieny/.pyenv/versions/3.10.11/bin/huggingface-cli\", line 8, in <module>\n",
+            "    sys.exit(main())\n",
+            "  File \"/Users/relhousieny/.pyenv/versions/3.10.11/lib/python3.10/site-packages/huggingface_hub/commands/huggingface_cli.py\", line 49, in main\n",
+            "    service.run()\n",
+            "  File \"/Users/relhousieny/.pyenv/versions/3.10.11/lib/python3.10/site-packages/huggingface_hub/commands/user.py\", line 101, in run\n",
+            "    login(token=self.args.token, add_to_git_credential=self.args.add_to_git_credential)\n",
+            "  File \"/Users/relhousieny/.pyenv/versions/3.10.11/lib/python3.10/site-packages/huggingface_hub/_login.py\", line 100, in login\n",
+            "    interpreter_login(new_session=new_session, write_permission=write_permission)\n",
+            "  File \"/Users/relhousieny/.pyenv/versions/3.10.11/lib/python3.10/site-packages/huggingface_hub/_login.py\", line 161, in interpreter_login\n",
+            "    token = getpass(\"Token: \")\n",
+            "  File \"/Users/relhousieny/.pyenv/versions/3.10.11/lib/python3.10/getpass.py\", line 77, in unix_getpass\n",
+            "    passwd = _raw_input(prompt, stream, input=input)\n",
+            "  File \"/Users/relhousieny/.pyenv/versions/3.10.11/lib/python3.10/getpass.py\", line 146, in _raw_input\n",
+            "    line = input.readline()\n",
+            "KeyboardInterrupt\n"
+          ]
+        }
+      ],
+      "source": [
+        "\n",
+        "!huggingface-cli login \n",
+        "\n",
+        "# split_dataset.push_to_hub(dataset_path_hf)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 55,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Token will not been saved to git credential helper. Pass `add_to_git_credential=True` if you want to set the git credential as well.\n",
             "Token is valid (permission: write).\n",
-            "\u001b[1m\u001b[31mCannot authenticate through git-credential as no helper is defined on your machine.\n",
-            "You might have to re-authenticate when pushing to the Hugging Face Hub.\n",
-            "Run the following command in your terminal in case you want to set the 'store' credential helper as default.\n",
-            "\n",
-            "git config --global credential.helper store\n",
-            "\n",
-            "Read https://git-scm.com/book/en/v2/Git-Tools-Credential-Storage for more details.\u001b[0m\n",
-            "Token has not been saved to git credential helper.\n",
-            "Your token has been saved to /root/.cache/huggingface/token\n",
+            "Your token has been saved to /Users/relhousieny/.cache/huggingface/token\n",
             "Login successful\n"
           ]
         }
       ],
       "source": [
-        "!huggingface-cli login\n",
-        "# split_dataset.push_to_hub(dataset_path_hf)"
+        "from huggingface_hub import login\n",
+        "access_token_write = 'xxx'\n",
+        "login(token = access_token_write)"
       ]
     },
     {
@@ -1298,7 +1337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1308,15 +1347,14 @@
       },
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'tokenized_dataset' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m/Users/relhousieny/code/CWAN-GENAI/fine_tune/LLM/preparing_data.ipynb Cell 30\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/relhousieny/code/CWAN-GENAI/fine_tune/LLM/preparing_data.ipynb#X41sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mtype\u001b[39m(tokenized_dataset)\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'tokenized_dataset' is not defined"
-          ]
+          "data": {
+            "text/plain": [
+              "datasets.arrow_dataset.Dataset"
+            ]
+          },
+          "execution_count": 40,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -1325,7 +1363,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 56,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1371,24 +1409,41 @@
       },
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'tokenized_dataset' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m/Users/relhousieny/code/CWAN-GENAI/fine_tune/LLM/preparing_data.ipynb Cell 31\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/relhousieny/code/CWAN-GENAI/fine_tune/LLM/preparing_data.ipynb#X42sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m tokenized_dataset\u001b[39m.\u001b[39mpush_to_hub(\u001b[39m\"\u001b[39m\u001b[39mrelhousieny/tokenized_lamini_template\u001b[39m\u001b[39m\"\u001b[39m)\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'tokenized_dataset' is not defined"
-          ]
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "b101fba47a9a424baf5a20d336297117",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Uploading the dataset shards:   0%|          | 0/1 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "8734cf64480f46188868b8a5b034f5c0",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Creating parquet from Arrow format:   0%|          | 0/2 [00:00<?, ?ba/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
-        "tokenized_dataset.push_to_hub(\"relhousieny/tokenized_lamini_template\")"
+        "tokenized_dataset.push_to_hub(\"relhousieny/tokenized_lamini_gpt\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1456,19 +1511,90 @@
       },
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'datasets' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m/Users/relhousieny/code/CWAN-GENAI/fine_tune/LLM/preparing_data.ipynb Cell 32\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/relhousieny/code/CWAN-GENAI/fine_tune/LLM/preparing_data.ipynb#X43sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m rany_dataset \u001b[39m=\u001b[39m datasets\u001b[39m.\u001b[39mload_dataset(\u001b[39m\"\u001b[39m\u001b[39mrelhousieny/tokenized_lamini_template\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/relhousieny/code/CWAN-GENAI/fine_tune/LLM/preparing_data.ipynb#X43sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(rany_dataset)\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'datasets' is not defined"
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "a64a44f6d24c4acc8dfff5346d6ad3ba",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Downloading readme:   0%|          | 0.00/433 [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "7632e0dcc77e48e188a43817be438ed3",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Downloading data files:   0%|          | 0/1 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "87f00471dbe94929abab09cade6d62ec",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Downloading data:   0%|          | 0.00/677k [00:00<?, ?B/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "319302b1180e45f7a3d5122805a5af51",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Extracting data files:   0%|          | 0/1 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "831ca6002a6b4a4b974d221460408913",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "Generating train split:   0%|          | 0/1400 [00:00<?, ? examples/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "DatasetDict({\n",
+            "    train: Dataset({\n",
+            "        features: ['question', 'answer', 'input_ids', 'attention_mask', 'labels'],\n",
+            "        num_rows: 1400\n",
+            "    })\n",
+            "})\n"
           ]
         }
       ],
       "source": [
-        "rany_dataset = datasets.load_dataset(\"relhousieny/tokenized_lamini_template\")\n",
+        "rany_dataset = datasets.load_dataset(\"relhousieny/tokenized_lamini_gpt\")\n",
         "\n",
         "print(rany_dataset)"
       ]
